...
                            <constraint firstItem="HVO-Hh-MUQ" firstAttribute="top" secondItem="huT-Q2-sEt" secondAttribute="bottom" constant="70" id="rTi-ty-g1M"/>
                            <constraint firstItem="4Vg-x9-GOI" firstAttribute="trailing" secondItem="zt5-wO-sSY" secondAttribute="trailing" id="uPR-Qt-6SA"/>
                            <constraint firstItem="4Vg-x9-GOI" firstAttribute="leading" secondItem="huT-Q2-sEt" secondAttribute="trailing" constant="18" id="uit-LK-doR"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                    </view>
                    <navigationItem key="navigationItem" title="One-RM" id="ZP5-My-5RT">
                        <barButtonItem key="leftBarButtonItem" title="Menu" image="Hamburger" id="W1y-lb-BRt">
                            <connections>
                                <segue destination="uLP-YD-3vC" kind="show" identifier="" id="AuS-65-pTc"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" enabled="NO" title="Log lift" image="text.badge.plus" catalog="system" id="GVK-t9-doY">
                            <connections>
                                <segue destination="hVT-ir-xjD" kind="show" identifier="saveToLog" id="3KG-RD-vDF"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                                        <rect key="frame" x="0.0" y="71.5" width="320" height="43.5"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qrf-Jb-YcB" id="LeC-cS-h7z">
                                            <rect key="frame" x="0.0" y="0.0" width="292.5" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Exercises" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mhQ-tY-Uxp">
                                                    <rect key="frame" x="16" y="11.5" width="72.5" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="i1l-P8-Fd0" id="JOc-qW-pJd"/>
                            <outlet property="delegate" destination="i1l-P8-Fd0" id="uA0-UH-ha5"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Settings" id="hKi-A6-bXf">
                        <barButtonItem key="backBarButtonItem" title="back" id="o6J-eu-V8Y"/>
                    </navigationItem>
                    <connections>
                        <outlet property="buildDateLabel" destination="hdo-HS-LPf" id="HOS-0f-0oz"/>
                        <outlet property="limitsLabel" destination="cmN-FR-LFA" id="2xu-LE-T9w"/>
                        <outlet property="syncWithiCloudCell" destination="Ohg-Ie-8Gw" id="7l0-ch-hpe"/>
                        <outlet property="versionLabel" destination="Cx9-PK-TPc" id="iJB-0w-TuV"/>
...
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="gFW-hC-VIi">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="cancelAddExercise:" destination="8jv-4Z-IBZ" id="nDv-C8-Obz"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Save" id="WQW-oV-SbR">
                            <connections>
                                <action selector="saveExercise:" destination="8jv-4Z-IBZ" id="gb1-zO-n9e"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                        <connections>
                            <outlet property="dataSource" destination="sCC-v0-IfH" id="1Ns-fr-uP5"/>
                            <outlet property="delegate" destination="sCC-v0-IfH" id="ZNd-tf-vjq"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Lift log" id="bab-Ez-rhY">
                        <barButtonItem key="rightBarButtonItem" title="Search" image="magnifyingglass" catalog="system" id="jp7-Zo-iZv">
                            <connections>
                                <action selector="searchButtonTapped:" destination="sCC-v0-IfH" id="uj0-EW-yBU"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
